# uart

./: .gitignore  CMakeLists.txt  README.md  build.sh  debug_serial  debug_serial.cpp  通信.csv
inc/: current_power_protocol.h  protocol.h  serial_screen_protocol.h  uart_reader.h
src/: current_power_protocol.cpp  main.cpp  serial_screen_protocol.cpp  uart_reader.cpp
